--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -13,31 +13,31 @@
     <!-- Wrapper for slides -->
       <div class="carousel-inner">
             <div class="item active">
-              <img src="assets/camaro.jpg" style="width:900px; height:440px"/>
+            <%= image_tag "camaro.jpg", :class => "style_image"%>
               <div class="carousel-caption">
                   2015 Camaro
               </div>
             </div>
             <div class="item">
-             <img src="assets/charger.jpg" style="width:900px; height:440px" class="img-responsive" />
+            <%= image_tag "charger.jpg", :class => "style_image"%>
               <div class="carousel-caption">
                 2014 charger <p></p>
               </div>
             </div>
             <div class="item">
-             <img src="assets/farrari.jpg" style="width:900px; height:440px" class="img-responsive" />
+            <%= image_tag "farrari.jpg", :class => "style_image"%>
               <div class="carousel-caption">
                 2014 farrari
               </div>
             </div>
             <div class="item">
-             <img src="assets/Lamborghini.jpg" style="width:900px; height:440px" class="img-responsive" />
+            <%= image_tag "Lamborghini.jpg", :class => "style_image"%>
               <div class="carousel-caption">
                 2012 Lamborghini <p></p>
               </div>
             </div>
             <div class="item">
-             <img src="assets/peugeot.jpg" style="width:900px; height:440px" class="img-responsive" />
+            <%= image_tag "peugeot.jpg", :class => "style_image"%>
               <div class="carousel-caption">
                 2011 peugeot <p></p>
               </div>
